Added more to the ignore list

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,184 @@
 /.vs/RecipesWithFunk/FileContentIndex/e2015777-aa8d-4591-818e-3a44b247d542.vsidx
 /.vs/RecipesWithFunk/FileContentIndex/e788cf3e-fcaa-4b6f-9063-452f59250bf7.vsidx
 /.vs/RecipesWithFunk/FileContentIndex/f752686f-b376-4911-b933-31a4c752d971.vsidx
+/.vs/RecipesWithFunk/CopilotIndices/17.14.827.52834/CodeChunks.db
+/.vs/RecipesWithFunk/CopilotIndices/17.14.827.52834/CodeChunks.db-shm
+/.vs/RecipesWithFunk/CopilotIndices/17.14.827.52834/CodeChunks.db-wal
+/.vs/RecipesWithFunk/CopilotIndices/17.14.827.52834/SemanticSymbols.db
+/.vs/RecipesWithFunk/CopilotIndices/17.14.827.52834/SemanticSymbols.db-shm
+/.vs/RecipesWithFunk/CopilotIndices/17.14.827.52834/SemanticSymbols.db-wal
+/.vs/RecipesWithFunk/DesignTimeBuild/.dtbcache.v2
+/.vs/RecipesWithFunk/v17/.suo
+/.vs/RecipesWithFunk/v17/DocumentLayout.backup.json
+/.vs/RecipesWithFunk/v17/DocumentLayout.json
+/RecipesWithFunk/bin/Debug/net9.0-windows/cs/Microsoft.Data.SqlClient.resources.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/de/Microsoft.Data.SqlClient.resources.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/es/Microsoft.Data.SqlClient.resources.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/fr/Microsoft.Data.SqlClient.resources.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/it/Microsoft.Data.SqlClient.resources.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/ja/Microsoft.Data.SqlClient.resources.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/ko/Microsoft.Data.SqlClient.resources.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/pl/Microsoft.Data.SqlClient.resources.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/pt-BR/Microsoft.Data.SqlClient.resources.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/ru/Microsoft.Data.SqlClient.resources.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/runtimes/unix/lib/net9.0/Microsoft.Data.SqlClient.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/runtimes/win/lib/net9.0/Microsoft.Data.SqlClient.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/runtimes/win-arm64/native/Microsoft.Data.SqlClient.SNI.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/runtimes/win-x64/native/Microsoft.Data.SqlClient.SNI.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/runtimes/win-x86/native/Microsoft.Data.SqlClient.SNI.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/tr/Microsoft.Data.SqlClient.resources.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/zh-Hans/Microsoft.Data.SqlClient.resources.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/zh-Hant/Microsoft.Data.SqlClient.resources.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/Azure.Core.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/Azure.Identity.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/Dapper.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/Microsoft.Bcl.AsyncInterfaces.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/Microsoft.Bcl.Cryptography.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/Microsoft.Data.SqlClient.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/Microsoft.Extensions.Caching.Abstractions.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/Microsoft.Extensions.Caching.Memory.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/Microsoft.Extensions.DependencyInjection.Abstractions.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/Microsoft.Extensions.Logging.Abstractions.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/Microsoft.Extensions.Options.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/Microsoft.Extensions.Primitives.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/Microsoft.Identity.Client.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/Microsoft.Identity.Client.Extensions.Msal.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/Microsoft.IdentityModel.Abstractions.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/Microsoft.IdentityModel.JsonWebTokens.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/Microsoft.IdentityModel.Logging.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/Microsoft.IdentityModel.Protocols.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/Microsoft.IdentityModel.Protocols.OpenIdConnect.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/Microsoft.IdentityModel.Tokens.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/Microsoft.SqlServer.Server.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/RecipesWithFunk.deps.json
+/RecipesWithFunk/bin/Debug/net9.0-windows/RecipesWithFunk.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/RecipesWithFunk.dll.config
+/RecipesWithFunk/bin/Debug/net9.0-windows/RecipesWithFunk.exe
+/RecipesWithFunk/bin/Debug/net9.0-windows/RecipesWithFunk.pdb
+/RecipesWithFunk/bin/Debug/net9.0-windows/System.ClientModel.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/System.IdentityModel.Tokens.Jwt.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/System.Memory.Data.dll
+/RecipesWithFunk/obj/Debug/net9.0-windows/apphost.exe
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesW.85F84D01.Up2Date
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk.AssemblyInfo.cs
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk.AssemblyInfoInputs.cache
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk.assets.cache
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk.csproj.AssemblyReference.cache
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk.csproj.CoreCompileInputs.cache
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk.csproj.FileListAbsolute.txt
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk.designer.deps.json
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk.dll
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk.g.resources
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk.pdb
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk.sourcelink.json
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_3frt5krf_wpftmp.AssemblyInfo.cs
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_3frt5krf_wpftmp.AssemblyInfoInputs.cache
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_3frt5krf_wpftmp.assets.cache
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_3frt5krf_wpftmp.GeneratedMSBuildEditorConfig.editorconfig
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_3frt5krf_wpftmp.GlobalUsings.g.cs
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_3frt5krf_wpftmp.sourcelink.json
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_4sb3tfpx_wpftmp.AssemblyInfo.cs
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_4sb3tfpx_wpftmp.AssemblyInfoInputs.cache
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_4sb3tfpx_wpftmp.assets.cache
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_4sb3tfpx_wpftmp.csproj.BuildWithSkipAnalyzers
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_4sb3tfpx_wpftmp.GeneratedMSBuildEditorConfig.editorconfig
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_4sb3tfpx_wpftmp.GlobalUsings.g.cs
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_4sb3tfpx_wpftmp.sourcelink.json
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_4ysuclji_wpftmp.AssemblyInfo.cs
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_4ysuclji_wpftmp.AssemblyInfoInputs.cache
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_4ysuclji_wpftmp.assets.cache
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_4ysuclji_wpftmp.GeneratedMSBuildEditorConfig.editorconfig
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_4ysuclji_wpftmp.GlobalUsings.g.cs
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_4ysuclji_wpftmp.sourcelink.json
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_d3ipw0zl_wpftmp.AssemblyInfo.cs
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_d3ipw0zl_wpftmp.AssemblyInfoInputs.cache
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_d3ipw0zl_wpftmp.assets.cache
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_d3ipw0zl_wpftmp.csproj.BuildWithSkipAnalyzers
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_d3ipw0zl_wpftmp.GeneratedMSBuildEditorConfig.editorconfig
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_d3ipw0zl_wpftmp.GlobalUsings.g.cs
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_d3ipw0zl_wpftmp.sourcelink.json
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_dmys330t_wpftmp.AssemblyInfo.cs
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_dmys330t_wpftmp.AssemblyInfoInputs.cache
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_dmys330t_wpftmp.assets.cache
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_dmys330t_wpftmp.GeneratedMSBuildEditorConfig.editorconfig
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_dmys330t_wpftmp.GlobalUsings.g.cs
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_dmys330t_wpftmp.sourcelink.json
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_MarkupCompile.cache
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_MarkupCompile.i.cache
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_MarkupCompile.i.lref
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_o2hm0n5b_wpftmp.AssemblyInfo.cs
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_o2hm0n5b_wpftmp.AssemblyInfoInputs.cache
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_o2hm0n5b_wpftmp.assets.cache
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_o2hm0n5b_wpftmp.GeneratedMSBuildEditorConfig.editorconfig
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_o2hm0n5b_wpftmp.GlobalUsings.g.cs
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_o2hm0n5b_wpftmp.sourcelink.json
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_s2f3rl3l_wpftmp.AssemblyInfo.cs
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_s2f3rl3l_wpftmp.AssemblyInfoInputs.cache
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_s2f3rl3l_wpftmp.assets.cache
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_s2f3rl3l_wpftmp.GeneratedMSBuildEditorConfig.editorconfig
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_s2f3rl3l_wpftmp.GlobalUsings.g.cs
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_s2f3rl3l_wpftmp.sourcelink.json
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_s335ofa1_wpftmp.AssemblyInfo.cs
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_s335ofa1_wpftmp.AssemblyInfoInputs.cache
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_s335ofa1_wpftmp.assets.cache
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_s335ofa1_wpftmp.csproj.BuildWithSkipAnalyzers
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_s335ofa1_wpftmp.GeneratedMSBuildEditorConfig.editorconfig
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_s335ofa1_wpftmp.GlobalUsings.g.cs
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_s335ofa1_wpftmp.sourcelink.json
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_ta0tfr4k_wpftmp.AssemblyInfo.cs
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_ta0tfr4k_wpftmp.AssemblyInfoInputs.cache
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_ta0tfr4k_wpftmp.assets.cache
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_ta0tfr4k_wpftmp.GeneratedMSBuildEditorConfig.editorconfig
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_ta0tfr4k_wpftmp.GlobalUsings.g.cs
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_ta0tfr4k_wpftmp.sourcelink.json
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_tky1rvtf_wpftmp.AssemblyInfo.cs
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_tky1rvtf_wpftmp.AssemblyInfoInputs.cache
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_tky1rvtf_wpftmp.assets.cache
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_tky1rvtf_wpftmp.csproj.BuildWithSkipAnalyzers
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_tky1rvtf_wpftmp.GeneratedMSBuildEditorConfig.editorconfig
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_tky1rvtf_wpftmp.GlobalUsings.g.cs
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_tky1rvtf_wpftmp.sourcelink.json
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_vzxvpiap_wpftmp.AssemblyInfo.cs
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_vzxvpiap_wpftmp.AssemblyInfoInputs.cache
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_vzxvpiap_wpftmp.assets.cache
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_vzxvpiap_wpftmp.GeneratedMSBuildEditorConfig.editorconfig
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_vzxvpiap_wpftmp.GlobalUsings.g.cs
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_vzxvpiap_wpftmp.sourcelink.json
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_w2b3eoij_wpftmp.AssemblyInfo.cs
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_w2b3eoij_wpftmp.AssemblyInfoInputs.cache
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_w2b3eoij_wpftmp.assets.cache
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_w2b3eoij_wpftmp.csproj.BuildWithSkipAnalyzers
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_w2b3eoij_wpftmp.GeneratedMSBuildEditorConfig.editorconfig
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_w2b3eoij_wpftmp.GlobalUsings.g.cs
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_w2b3eoij_wpftmp.sourcelink.json
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_yurjd3nb_wpftmp.AssemblyInfo.cs
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_yurjd3nb_wpftmp.AssemblyInfoInputs.cache
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_yurjd3nb_wpftmp.assets.cache
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_yurjd3nb_wpftmp.GeneratedMSBuildEditorConfig.editorconfig
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_yurjd3nb_wpftmp.GlobalUsings.g.cs
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_yurjd3nb_wpftmp.sourcelink.json
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_z1garvgm_wpftmp.AssemblyInfo.cs
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_z1garvgm_wpftmp.AssemblyInfoInputs.cache
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_z1garvgm_wpftmp.assets.cache
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_z1garvgm_wpftmp.GeneratedMSBuildEditorConfig.editorconfig
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_z1garvgm_wpftmp.GlobalUsings.g.cs
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_z1garvgm_wpftmp.sourcelink.json
+/RecipesWithFunk/obj/Debug/net9.0-windows/ref/RecipesWithFunk.dll
+/RecipesWithFunk/obj/Debug/net9.0-windows/refint/RecipesWithFunk.dll
+/RecipesWithFunk/obj/Debug/net9.0-windows/UserControls/ViewRecipesControl.baml
+/RecipesWithFunk/obj/Debug/net9.0-windows/UserControls/ViewRecipesControl.g.cs
+/RecipesWithFunk/obj/Debug/net9.0-windows/UserControls/ViewRecipesControl.g.i.cs
+/RecipesWithFunk/obj/project.assets.json
+/RecipesWithFunk/obj/project.nuget.cache
+/RecipesWithFunk/obj/RecipesWithFunk.csproj.nuget.dgspec.json
+/RecipesWithFunk/obj/RecipesWithFunk.csproj.nuget.g.targets
+/RecipesWithFunk/obj/RecipesWithFunk_dmys330t_wpftmp.csproj.nuget.dgspec.json
+/RecipesWithFunk/obj/RecipesWithFunk_dmys330t_wpftmp.csproj.nuget.g.props
+/RecipesWithFunk/obj/RecipesWithFunk_dmys330t_wpftmp.csproj.nuget.g.targets
+/RecipesWithFunk/obj/RecipesWithFunk_o2hm0n5b_wpftmp.csproj.nuget.dgspec.json
+/RecipesWithFunk/obj/RecipesWithFunk_o2hm0n5b_wpftmp.csproj.nuget.g.props
+/RecipesWithFunk/obj/RecipesWithFunk_o2hm0n5b_wpftmp.csproj.nuget.g.targets
+/RecipesWithFunk/obj/RecipesWithFunk_vzxvpiap_wpftmp.csproj.nuget.dgspec.json
+/RecipesWithFunk/obj/RecipesWithFunk_vzxvpiap_wpftmp.csproj.nuget.g.props
+/RecipesWithFunk/obj/RecipesWithFunk_vzxvpiap_wpftmp.csproj.nuget.g.targets
+/RecipesWithFunk/Core
