Updated Add Recipe Button coloring.

--- a/.gitignore
+++ b/.gitignore
@@ -193,3 +193,11 @@
 /RecipesWithFunk/obj/RecipesWithFunk_vzxvpiap_wpftmp.csproj.nuget.g.props
 /RecipesWithFunk/obj/RecipesWithFunk_vzxvpiap_wpftmp.csproj.nuget.g.targets
 /RecipesWithFunk/Core
+/.vs/RecipesWithFunk/FileContentIndex
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_hwdxpjbz_wpftmp.AssemblyInfo.cs
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_hwdxpjbz_wpftmp.AssemblyInfoInputs.cache
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_hwdxpjbz_wpftmp.assets.cache
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_hwdxpjbz_wpftmp.GeneratedMSBuildEditorConfig.editorconfig
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_hwdxpjbz_wpftmp.GlobalUsings.g.cs
+/RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_hwdxpjbz_wpftmp.sourcelink.json
+/RecipesWithFunk/obj/Debug/net9.0-windows/Resources/Styles/Colors.baml
