--- a/.gitignore
+++ b/.gitignore
@@ -201,3 +201,169 @@
 /RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_hwdxpjbz_wpftmp.GlobalUsings.g.cs
 /RecipesWithFunk/obj/Debug/net9.0-windows/RecipesWithFunk_hwdxpjbz_wpftmp.sourcelink.json
 /RecipesWithFunk/obj/Debug/net9.0-windows/Resources/Styles/Colors.baml
+/.vs/ProjectEvaluation/recipeswithfunk.metadata.v9.bin
+/.vs/ProjectEvaluation/recipeswithfunk.projects.v9.bin
+/.vs/ProjectEvaluation/recipeswithfunk.strings.v9.bin
+/.vs/Recipes/v17/.wsuo
+/.vs/Recipes/v17/DocumentLayout.json
+/.vs/RecipesWithFunk/CopilotIndices/17.14.995.13737/CodeChunks.db
+/.vs/RecipesWithFunk/CopilotIndices/17.14.995.13737/CodeChunks.db-shm
+/.vs/RecipesWithFunk/CopilotIndices/17.14.995.13737/CodeChunks.db-wal
+/.vs/RecipesWithFunk/CopilotIndices/17.14.995.13737/SemanticSymbols.db
+/.vs/RecipesWithFunk/CopilotIndices/17.14.995.13737/SemanticSymbols.db-shm
+/.vs/RecipesWithFunk/CopilotIndices/17.14.995.13737/SemanticSymbols.db-wal
+/.vs/RecipesWithFunk/v17/.futdcache.v2
+/RecipesWithFunk/bin/Debug/net9.0-windows/cs-CZ/Xceed.Wpf.AvalonDock.resources.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/de/Xceed.Wpf.AvalonDock.resources.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/es/Xceed.Wpf.AvalonDock.resources.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/fr/Xceed.Wpf.AvalonDock.resources.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/hu/Xceed.Wpf.AvalonDock.resources.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/it/Xceed.Wpf.AvalonDock.resources.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/ja-JP/Xceed.Wpf.AvalonDock.resources.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/pt-BR/Xceed.Wpf.AvalonDock.resources.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/ro/Xceed.Wpf.AvalonDock.resources.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/ru/Xceed.Wpf.AvalonDock.resources.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/sv/Xceed.Wpf.AvalonDock.resources.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/zh-Hans/Xceed.Wpf.AvalonDock.resources.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/Xceed.Wpf.AvalonDock.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/Xceed.Wpf.AvalonDock.Themes.Aero.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/Xceed.Wpf.AvalonDock.Themes.Metro.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/Xceed.Wpf.AvalonDock.Themes.VS2010.dll
+/RecipesWithFunk/bin/Debug/net9.0-windows/Xceed.Wpf.Toolkit.dll
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/cs/Microsoft.Data.SqlClient.resources.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/cs-CZ/Xceed.Wpf.AvalonDock.resources.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/de/Microsoft.Data.SqlClient.resources.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/de/Xceed.Wpf.AvalonDock.resources.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/es/Microsoft.Data.SqlClient.resources.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/es/Xceed.Wpf.AvalonDock.resources.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/fr/Microsoft.Data.SqlClient.resources.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/fr/Xceed.Wpf.AvalonDock.resources.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/hu/Xceed.Wpf.AvalonDock.resources.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/it/Microsoft.Data.SqlClient.resources.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/it/Xceed.Wpf.AvalonDock.resources.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/ja/Microsoft.Data.SqlClient.resources.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/ja-JP/Xceed.Wpf.AvalonDock.resources.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/ko/Microsoft.Data.SqlClient.resources.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/pl/Microsoft.Data.SqlClient.resources.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/pt-BR/Microsoft.Data.SqlClient.resources.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/pt-BR/Xceed.Wpf.AvalonDock.resources.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/Resources/Images/RecipeBook.jpg.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/ro/Xceed.Wpf.AvalonDock.resources.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/ru/Microsoft.Data.SqlClient.resources.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/ru/Xceed.Wpf.AvalonDock.resources.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/runtimes/unix/lib/net9.0/Microsoft.Data.SqlClient.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/runtimes/win/lib/net9.0/Microsoft.Data.SqlClient.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/runtimes/win-arm64/native/Microsoft.Data.SqlClient.SNI.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/runtimes/win-x64/native/Microsoft.Data.SqlClient.SNI.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/runtimes/win-x86/native/Microsoft.Data.SqlClient.SNI.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/sv/Xceed.Wpf.AvalonDock.resources.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/tr/Microsoft.Data.SqlClient.resources.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/zh-Hans/Microsoft.Data.SqlClient.resources.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/zh-Hans/Xceed.Wpf.AvalonDock.resources.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/zh-Hant/Microsoft.Data.SqlClient.resources.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/Azure.Core.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/Azure.Identity.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/Dapper.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/Launcher.exe.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/Microsoft.Bcl.AsyncInterfaces.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/Microsoft.Bcl.Cryptography.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/Microsoft.Data.SqlClient.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/Microsoft.Extensions.Caching.Abstractions.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/Microsoft.Extensions.Caching.Memory.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/Microsoft.Extensions.DependencyInjection.Abstractions.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/Microsoft.Extensions.Logging.Abstractions.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/Microsoft.Extensions.Options.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/Microsoft.Extensions.Primitives.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/Microsoft.Identity.Client.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/Microsoft.Identity.Client.Extensions.Msal.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/Microsoft.IdentityModel.Abstractions.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/Microsoft.IdentityModel.JsonWebTokens.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/Microsoft.IdentityModel.Logging.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/Microsoft.IdentityModel.Protocols.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/Microsoft.IdentityModel.Protocols.OpenIdConnect.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/Microsoft.IdentityModel.Tokens.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/Microsoft.SqlServer.Server.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/RecipesWithFunk.deps.json.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/RecipesWithFunk.dll.config.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/RecipesWithFunk.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/RecipesWithFunk.dll.manifest
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/RecipesWithFunk.exe.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/RecipesWithFunk.runtimeconfig.json.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/System.ClientModel.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/System.IdentityModel.Tokens.Jwt.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/System.Memory.Data.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/Xceed.Wpf.AvalonDock.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/Xceed.Wpf.AvalonDock.Themes.Aero.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/Xceed.Wpf.AvalonDock.Themes.Metro.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/Xceed.Wpf.AvalonDock.Themes.VS2010.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_0/Xceed.Wpf.Toolkit.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/cs/Microsoft.Data.SqlClient.resources.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/cs-CZ/Xceed.Wpf.AvalonDock.resources.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/de/Microsoft.Data.SqlClient.resources.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/de/Xceed.Wpf.AvalonDock.resources.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/es/Microsoft.Data.SqlClient.resources.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/es/Xceed.Wpf.AvalonDock.resources.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/fr/Microsoft.Data.SqlClient.resources.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/fr/Xceed.Wpf.AvalonDock.resources.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/hu/Xceed.Wpf.AvalonDock.resources.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/it/Microsoft.Data.SqlClient.resources.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/it/Xceed.Wpf.AvalonDock.resources.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/ja/Microsoft.Data.SqlClient.resources.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/ja-JP/Xceed.Wpf.AvalonDock.resources.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/ko/Microsoft.Data.SqlClient.resources.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/pl/Microsoft.Data.SqlClient.resources.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/pt-BR/Microsoft.Data.SqlClient.resources.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/pt-BR/Xceed.Wpf.AvalonDock.resources.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/Resources/Images/RecipeBook.jpg.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/ro/Xceed.Wpf.AvalonDock.resources.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/ru/Microsoft.Data.SqlClient.resources.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/ru/Xceed.Wpf.AvalonDock.resources.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/runtimes/unix/lib/net9.0/Microsoft.Data.SqlClient.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/runtimes/win/lib/net9.0/Microsoft.Data.SqlClient.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/runtimes/win-arm64/native/Microsoft.Data.SqlClient.SNI.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/runtimes/win-x64/native/Microsoft.Data.SqlClient.SNI.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/runtimes/win-x86/native/Microsoft.Data.SqlClient.SNI.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/sv/Xceed.Wpf.AvalonDock.resources.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/tr/Microsoft.Data.SqlClient.resources.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/zh-Hans/Microsoft.Data.SqlClient.resources.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/zh-Hans/Xceed.Wpf.AvalonDock.resources.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/Azure.Core.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/Azure.Identity.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/Dapper.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/Launcher.exe.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/Microsoft.Bcl.AsyncInterfaces.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/Microsoft.Bcl.Cryptography.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/Microsoft.Data.SqlClient.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/Microsoft.Extensions.Caching.Abstractions.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/Microsoft.Extensions.Caching.Memory.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/Microsoft.Extensions.DependencyInjection.Abstractions.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/Microsoft.Extensions.Logging.Abstractions.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/Microsoft.Extensions.Options.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/Microsoft.Extensions.Primitives.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/Microsoft.Identity.Client.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/Microsoft.Identity.Client.Extensions.Msal.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/Microsoft.IdentityModel.Abstractions.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/Microsoft.IdentityModel.JsonWebTokens.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/Microsoft.IdentityModel.Logging.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/Microsoft.IdentityModel.Protocols.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/Microsoft.IdentityModel.Protocols.OpenIdConnect.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/Microsoft.IdentityModel.Tokens.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/Microsoft.SqlServer.Server.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/RecipesWithFunk.deps.json.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/RecipesWithFunk.dll.config.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/RecipesWithFunk.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/RecipesWithFunk.dll.manifest
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/RecipesWithFunk.exe.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/RecipesWithFunk.runtimeconfig.json.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/System.ClientModel.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/System.IdentityModel.Tokens.Jwt.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/System.Memory.Data.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/Xceed.Wpf.AvalonDock.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/Xceed.Wpf.AvalonDock.Themes.Aero.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/Xceed.Wpf.AvalonDock.Themes.Metro.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/Xceed.Wpf.AvalonDock.Themes.VS2010.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/Xceed.Wpf.Toolkit.dll.deploy
+/RecipesWithFunk/bin/publish/Application Files/RecipesWithFunk_1_0_0_1/zh-Hant/Microsoft.Data.SqlClient.resources.dll.deploy
+/RecipesWithFunk/bin/publish
+/RecipesWithFunk/bin/Release/net9.0-windows/app.publish
+/RecipesWithFunk/bin/Release/net9.0-windows
